--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-/* @import url("https://www.fontspace.com/bruce-forever-font-f89044"); */
+
 @font-face {
-  font-family:" Roboto", sans-serif; /* Choose a name for your font family */
+  font-family:" Roboto", sans-serif; 
   src: url('./fonts/BruceForeverRegular-X3jd2.ttf') ;
-  /* Add additional src lines for other font file formats if necessary */
+ 
   font-weight: normal;
   font-style: normal;
 }
@@ -10,7 +10,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  /* border-radius: 25px; */
+ 
   
  
   
@@ -25,22 +25,14 @@ body {
 .mainApp{
   overflow-x:hidden ;
 }
-/*------------global-----------*/
+
 .container {
   max-width: 85%;
   margin: auto;
-  /* display:flex;
-  justify-content: center; */
+ 
   
 }
-/* .flexSB {
-  display: flex;
-  justify-content: space-between;
 
-
-  
-  
-} */
 
 .fix{
   position: fixed;
@@ -98,7 +90,7 @@ button:hover {
   color: #fff;
 }
 
-/*------------global-----------*/
+
 #heading {
   text-align: center;
   padding: 40px 0;
@@ -176,9 +168,7 @@ white-space: normal !important;
   display: flex;
 }
 .grid2 {
-  /* display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 30px; */
+ 
   display: flex;
   justify-content: center;
   gap:30px;
@@ -193,8 +183,7 @@ white-space: normal !important;
   transition: 0.5s;
   color: #00fbf4;
   background-color: black;
-  /* display: flex;
-  flex-direction: column; */
+ 
   
 }
 .outline-btn:hover {
@@ -202,46 +191,23 @@ white-space: normal !important;
   color: #fff;
 }
 .grid3 {
-  /* display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-gap: 10px; */
+  
   display: flex;
   justify-content: center;
   gap:5%;
   flex-wrap: wrap;
   
 }
-/* .padding {
-  padding: 80px 0;
-} */
+
 .shadow {
   box-shadow: 0 5px 25px -2px rgb(0 0 0 / 6%);
- /* background-color: #000000;*/
+ 
   border: 3px solid transparent;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(143, 109, 205, 0.702);
   animation: borderLight 2s infinite;
   
 }
-/* @media screen and (max-width: 768px) {
-  .grid2,
-  .grid3,
-  .grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .back {
-    background-position: center;
-    padding-top: 50%;
-    height: 80vh;
-  }
-}
-
-
-.wrapper{
-  display: flex !important;
-  flex-wrap: wrap !important;
-  justify-content: center;
-} */
 
 
 @media (max-width: 512px) {
