--- a/src/components/common/header/Debit.css
+++ b/src/components/common/header/Debit.css
@@ -1,4 +1,4 @@
-/* Global styles */
+
 body {
   margin: 0;
   padding: 0;
@@ -7,35 +7,30 @@ body {
   
 }
 
-/* Center content vertically and horizontally */
+
 .debit {
   display: flex;
-  /* justify-content: center; */
+ 
   align-items: center;
   height: 100vh;
   margin-left: 1%;
-  /* gap: 20px; */
+  
   padding-top: 50px;
   
   
 }
 
-/* Card */
+
 .card {
-  width: 90%; /* Adjust the width for responsiveness */
-  max-width: 800px; /* Set a maximum width for larger screens */
+  width: 90%; 
+  max-width: 800px; 
   margin: 0 auto;
-  /* border: 1px solid rgba(0, 0, 0, 0.2); */
-  /* background: linear-gradient(
-    90deg,
-   
-  ); */
-  
+
   background: transparent, white;
     border: 1px solid #029ba2;
     box-shadow:  0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe4a, 0 0 0.8rem #bc13fe00, 0 0 2.8rem #bc13fe78, inset 0 0 1.3rem #bc13fe73;;
     border-radius: 15px;
-  /* padding: 20px; */
+ 
   box-sizing: border-box;
   overflow: hidden;
   backdrop-filter: blur(5px);
@@ -43,10 +38,10 @@ body {
   transition: 0.5s;
 }
 
-/* Timer box */
+
 .timer-box {
   display: flex;
-  /* flex-direction: column; */
+ 
 
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   flex-wrap: wrap;
@@ -64,17 +59,11 @@ body {
  
 }
 
-/* Timer values */
 .day,
 .hour,
 .min,
 .sec {
-  /* background: linear-gradient(
-    90deg,
-    rgb(0, 0, 0) 0%,
-    rgb(52, 140, 194) 25%,
-    rgb(0, 0, 0) 100%
-  ); */
+ 
   
  background-color: #035164; 
  margin-top: 4px;
@@ -92,28 +81,7 @@ body {
   
 }
 
-/* @media(max-width: 425px){
-  .day,
-.hour,
-.min,
-.sec {
-  font-size: 10px;
-}
-}
 
-@media(max-width: 270px){
-  .day,
-.hour,
-.min,
-.sec {
-  font-size: 5px;
-}
-} */
-
-
-
-
-/* Line separator */
 .line {
   align-items: center;
   background: #ffffff;
@@ -126,23 +94,16 @@ body {
   position: relative;
 }
 
-/* Colored line */
+
 .line-color {
-  /* background: linear-gradient(
-    90deg,
-    rgb(147, 77, 239) 0%,
-    rgba(0, 232, 255, 1) 25%,
-    rgba(177, 117, 255, 1) 50%,
-    rgba(0, 37, 173, 1) 79%,
-    rgba(177, 117, 255, 1) 100%
-  ); */
+  
 
   background-color: #408391c9;
   height: 100%;
   width: 45%;
 }
 
-/* USDT raised text */
+
 .USDT-raised {
   font-size: 1.5em;
   font-weight: 400;
@@ -151,7 +112,7 @@ body {
   color: #c9d2d7;
 }
 
-/* ETH Balance and listing price text */
+
 .sidess {
   display: flex;
   justify-content: space-between;
@@ -159,7 +120,7 @@ body {
   margin-bottom: 20px;
 }
 
-/* ETH and USDT boxes */
+
 .ETH-USDT-box {
   align-items: center;
   display: flex;
@@ -169,7 +130,6 @@ body {
   padding: 10px 0 15px;
 }
 
-/* Item box */
 .itemm {
   background:#035164;
   border-radius: 6px;
@@ -178,7 +138,7 @@ body {
   width: 90px;
 }
 
-/* Item image and text */
+
 .item-img {
   height: 50px;
   align-items: center;
@@ -186,17 +146,17 @@ body {
   gap: 10px;
 }
 
-/* Item head text */
+
 .item-head {
   font-family: Courier New, Courier, monospace;
   font-size: 14px;
   font-weight: 600;
 }
 
-/* Input fields */
+
 input {
   width: 90%;
-  padding: 15px; /* Increase padding to adjust the height */
+  padding: 15px; 
   margin-bottom: 10px;
   margin-left: 9px;
   border-radius: 12px;
@@ -212,18 +172,12 @@ input {
 
 }
 
-/* Buy Now button */
+
 .buynow-button {
   border-radius: 15px;
-  width: 50%; /* Set the button width to a percentage */
-  max-width: 300px; /* Set a maximum width for larger screens */
-  align-self: center; /* Center vertically within its container */
-  /* background: linear-gradient(
-    90deg,
-    rgb(0, 0, 0) 0%,
-    rgba(0, 232, 255, 1) 25%,
-    rgb(0, 0, 0) 100%
-  ); */
+  width: 50%; 
+  max-width: 300px; 
+  align-self: center; 
   
   color: #fff;
   font-size: 1.2rem;
@@ -251,7 +205,7 @@ b{
   color: white;
   font-size: 14px;
 }
-/* ETH-USDT balance text */
+
 .ETH-USDT-balance {
   color: #c9d2d7;
   font-family: Work Sans;
